ENH/FIX: implemented modularity in work of last commit (clustering on fast vs slow tappers. Started with prediction of two resulting cluster groups

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -46,11 +46,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python sys 3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]\n",
-      "pandas 1.4.3\n",
-      "numpy 1.21.5\n",
-      "sci-py 1.7.3\n",
-      "sci-kit learn 1.1.1\n"
+      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
+      "pandas 1.4.4\n",
+      "numpy 1.23.3\n",
+      "sci-py 1.9.1\n",
+      "sci-kit learn 1.1.2\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,6 +417,9 @@
     "aggr_meth = 'mean'  # mean, std dev, coef of var\n",
     "y_label = ft_select\n",
     "\n",
+    "traces_excl = [\n",
+    "    'DUS006_M0S0_L_1',\n",
+    "]\n",
     "\n",
     "totalFreq = []\n",
     "totalTaps = []\n",
@@ -428,6 +431,8 @@
     "for i in range(5): box_lists[i] = []\n",
     "\n",
     "for trace in ftClass10.incl_traces:\n",
+    "    \n",
+    "    if trace in traces_excl: continue\n",
     "\n",
     "    trace = getattr(ftClass10, trace)\n",
     "    value = getattr(trace.fts, ft_select)\n",
@@ -482,7 +487,7 @@
     "#     os.path.join(fig_path_1D, 'fts_boxplots', figname),\n",
     "#     dpi=150, facecolor='w',)\n",
     "\n",
-    "plt.close()"
+    "plt.show()"
    ]
   },
   {
@@ -494,55 +499,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tap_plotting.retap_plot_clusters as plot_cluster"
+    "import tap_plotting.retap_plot_clusters as plot_cluster\n",
+    "import tap_predict.tap_pred_prepare as pred_prep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of NaNs per feat: [0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# create matrix to cluster with\n",
+    "importlib.reload(pred_prep)\n",
     "\n",
+    "# create matrix to cluster with\n",
     "traces_excl = [\n",
     "    'DUS006_M0S0_L_1',\n",
     "]\n",
     "\n",
-    "X = []\n",
-    "y = []\n",
+    "ft_sel = [\n",
+    "    'mean_intraTapInt',\n",
+    "    'coefVar_intraTapInt',\n",
+    "    'freq'\n",
+    "]\n",
     "\n",
-    "iti_list = []\n",
-    "freq_list = []\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
+    "    ftClass=ftClass,\n",
+    "    incl_feats=ft_sel,\n",
+    "    incl_traces=ftClass.incl_traces,\n",
+    "    excl_traces=traces_excl,\n",
+    "    to_zscore=True,\n",
+    ")\n",
     "\n",
-    "for trace in ftClass.incl_traces:\n",
-    "    if trace in traces_excl: continue\n",
-    "\n",
-    "    trace = getattr(ftClass, trace)\n",
-    "\n",
-    "    y.append(getattr(trace, 'tap_score'))\n",
-    "\n",
-    "    iti_list.append(getattr(trace.fts, 'intraTapInt'))\n",
-    "    freq_list.append(getattr(trace.fts, 'freq'))\n",
-    "    \n",
-    "# X.append(freq_list)\n",
-    "\n",
-    "mean_iti = [np.nanmean(l) for l in iti_list]\n",
-    "cv_iti = [scipy.stats.variation(l) for l in iti_list]\n",
-    "X.append(mean_iti)\n",
-    "X.append(cv_iti)\n",
-    "\n",
-    "y = np.array([y]).T\n",
-    "X = np.array(X).T\n",
     "\n",
     "## MASKING BCS TOO LOW NUMBERS\n",
     "# UPDRS 4 -> 3 merge (4: n=3)\n",
     "mask = y == 4\n",
     "y[mask] = 3\n",
+    "\n",
     "# # UPDRS 0 -> 1 merge (0: n=40)\n",
     "# mask = y == 0\n",
     "# y[mask] = 1"
@@ -550,16 +555,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1332: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1332: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -568,7 +573,7 @@
     "importlib.reload(plot_cluster)\n",
     "importlib.reload(postExtrCalc)\n",
     "\n",
-    "n_clusters = 3\n",
+    "n_clusters = 2\n",
     "\n",
     "plot_cluster.plot_cluster_kMeans(\n",
     "    X=X, y=y, n_clusters=n_clusters,\n",
@@ -576,11 +581,11 @@
     "    z_score=True,\n",
     "    alt_labels=['mean ITI', 'cv ITI'],\n",
     "    show=False,\n",
-    "    figsave_dir=os.path.join(fig_path_1D, 'clustering'),\n",
-    "    figsave_name=(\n",
-    "        f'{dt.date.today().year}{mm}{dd}'\n",
-    "        f'_{n_clusters}clusters_M_CV_iti_'   # freq\n",
-    "    ),\n",
+    "    # figsave_dir=os.path.join(fig_path_1D, 'clustering'),\n",
+    "    # figsave_name=(\n",
+    "    #     f'{dt.date.today().year}{mm}{dd}'\n",
+    "    #     f'_{n_clusters}clusters_M_CV_iti_'   # freq\n",
+    "    # ),\n",
     ")\n",
     "\n",
     "y_clust, centr_clust, _ = plot_cluster.get_kMeans_clusters(\n",
@@ -593,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('ultraleap')",
+   "display_name": "Python 3.9.13 ('retap')",
    "language": "python",
    "name": "python3"
   },
@@ -682,12 +687,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ec69415375fc343f73860bd27e00fe01311a25a0ec3cc4b8c97ec57f9adf05ee"
+    "hash": "f23a308fb4398211655e9950c8371f856de701ec09eac61c96054832e4a49057"
    }
   }
  },
