--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# own functions\n",
     "from retap_utils import utils_dataManagement\n",
     "\n",
-    "import tap_predict.tap_pred_prepare as prep_pred\n",
+    "import tap_predict.tap_pred_prepare as pred_prep\n",
     "import tap_plotting.retap_plot_clusters as plot_cluster"
    ]
   },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "dict_keys(['triax_arr', 'fs', 'impacts', 'tap_lists', 'max_n_taps_incl', 'updrsSubScore', 'total_nTaps', 'freq', 'tap_durations', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness_taps', 'jerkiness_trace', 'mean_tapRMS', 'coefVar_tapRMS', 'IQR_tapRMS', 'decr_tapRMS', 'slope_tapRMS', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_impactRMS', 'coefVar_impactRMS', 'IQR_impactRMS', 'decr_impactRMS', 'slope_impactRMS', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness_taps', 'coefVar_jerkiness_taps', 'IQR_jerkiness_taps', 'decr_jerkiness_taps', 'slope_jerkiness_taps'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,14 +171,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(prep_pred)\n",
+    "importlib.reload(pred_prep)\n",
     "\n",
-    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "traces, feats = pred_prep.select_traces_and_feats(\n",
     "    ftClass,\n",
     "    center='all',\n",
     "    use_sel_fts=True,\n",
     ")\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
@@ -195,57 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create matrix to cluster with\n",
-    "\n",
-    "traces_excl = [\n",
-    "    'DUS006_M0S0_L_1',\n",
-    "]\n",
-    "\n",
-    "X = []\n",
-    "y = []\n",
-    "\n",
-    "iti_list = []\n",
-    "freq_list = []\n",
-    "\n",
-    "for trace in ftClass.incl_traces:\n",
-    "    if trace in traces_excl: continue\n",
-    "\n",
-    "    trace = getattr(ftClass, trace)\n",
-    "\n",
-    "    y.append(getattr(trace, 'tap_score'))\n",
-    "\n",
-    "    iti_list.append(getattr(trace.fts, 'intraTapInt'))\n",
-    "    freq_list.append(getattr(trace.fts, 'freq'))\n",
-    "    \n",
-    "X.append(freq_list)  # INCLUDE FREQ (HZ) OF TOTAL TRACE\n",
-    "\n",
-    "mean_iti = [np.nanmean(l) for l in iti_list]\n",
-    "cv_iti = [scipy.stats.variation(l) for l in iti_list]\n",
-    "X.append(mean_iti)  # INCLUDE MEAN OF INTRA-TAP-INTERVAL\n",
-    "X.append(cv_iti)  # INCLUDE COEF OF VAR OF INTRA-TAP-INTERVAL\n",
-    "\n",
-    "y = np.array([y]).T\n",
-    "X = np.array(X).T\n",
-    "\n",
-    "## MASKING BCS TOO LOW NUMBERS\n",
-    "# UPDRS 4 -> 3 merge (4: n=3)\n",
-    "mask = y == 4\n",
-    "y[mask] = 3\n",
-    "\n",
-    "# # UPDRS 0 -> 1 merge (0: n=40)\n",
-    "# mask = y == 0\n",
-    "# y[mask] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of NaNs per feat: [0 0 0]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -256,13 +215,41 @@
     }
    ],
    "source": [
-    "\n",
+    "importlib.reload(pred_prep)\n",
     "importlib.reload(plot_cluster)\n",
     "\n",
+    "# set variables for pre-clustering\n",
     "n_clusters = 2\n",
+    "traces_excl = [\n",
+    "    'DUS006_M0S0_L_1',\n",
+    "]\n",
+    "ft_sel = [\n",
+    "    'mean_intraTapInt',\n",
+    "    'coefVar_intraTapInt',\n",
+    "    'freq'\n",
+    "]\n",
     "\n",
+    "# create matrix to cluster with\n",
+    "X_1, y = pred_prep.create_X_y_vectors(\n",
+    "    ftClass=ftClass,\n",
+    "    incl_feats=ft_sel,\n",
+    "    incl_traces=ftClass.incl_traces,\n",
+    "    excl_traces=traces_excl,\n",
+    "    to_zscore=True,\n",
+    ")\n",
+    "\n",
+    "## MASKING BCS TOO LOW NUMBERS\n",
+    "# UPDRS 4 -> 3 merge (4: n=3)\n",
+    "mask = y == 4\n",
+    "y[mask] = 3\n",
+    "\n",
+    "# # UPDRS 0 -> 1 merge (0: n=40)\n",
+    "# mask = y == 0\n",
+    "# y[mask] = 1\n",
+    "\n",
+    "# create cluster labels\n",
     "y_clust, centr_clust, _ = plot_cluster.get_kMeans_clusters(\n",
-    "    X=X,\n",
+    "    X=X_1,\n",
     "    n_clusters=n_clusters,\n",
     "    use_pca=True,\n",
     "    z_score=True,\n",
@@ -270,38 +257,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "traces, feats = prep_pred.select_traces_and_feats(\n",
-    "    ftClass, use_sel_fts=True,\n",
-    ")\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
-    "    ftClass,\n",
-    "    incl_traces=traces,\n",
-    "    incl_feats=feats,\n",
-    "    to_norm=False,\n",
-    ")"
+    "#### Make X_2 input Matrix with more features for score prediction per Cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(376, 15) (376,) (376,)\n"
+      "# of NaNs per feat: [0 0 0 0 0 0]\n"
      ]
     }
    ],
    "source": [
+    "importlib.reload(pred_prep)\n",
+    "\n",
+    "incl_traces, ft_list = pred_prep.select_traces_and_feats(\n",
+    "    ftClass, use_sel_fts=True, excl_traces=traces_excl,\n",
+    ")\n",
+    "\n",
+    "feats_for_2nd_pred = [\n",
+    "    'coefVar_intraTapInt',\n",
+    "    'mean_tapRMS',\n",
+    "    'coefVar_tapRMS',\n",
+    "    'slope_tapRMS',\n",
+    "    'mean_raise_velocity',\n",
+    "    'jerkiness_trace'\n",
+    "]\n",
+    "\n",
+    "X_2, y = pred_prep.create_X_y_vectors(\n",
+    "    ftClass,\n",
+    "    incl_traces=ftClass.incl_traces,\n",
+    "    incl_feats=feats_for_2nd_pred,\n",
+    "    excl_traces=traces_excl,\n",
+    "    to_norm=False,\n",
+    "    to_zscore=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(375, 3) (375, 6) (375,) (375,) 6 375\n"
+     ]
+    }
+   ],
+   "source": [
+    "incl_traces = [\n",
+    "    t for t in ftClass.incl_traces\n",
+    "    if t not in traces_excl\n",
+    "]\n",
+    "\n",
+    "\n",
     "print(\n",
-    "    X.shape, y.shape, y_clust.shape\n",
+    "    X_1.shape, X_2.shape, y.shape, y_clust.shape,\n",
+    "    len(feats_for_2nd_pred), len(incl_traces)\n",
     ")"
    ]
   },
@@ -312,6 +335,257 @@
     "#### next steps:\n",
     "- split X and y in two groups based on clusters\n",
     "- test default ML modeling on both groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(85, 6) (290, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_2A = X_2[y_clust == 0]\n",
+    "y_2A = y[y_clust == 0]\n",
+    "\n",
+    "X_2B = X_2[y_clust == 1]\n",
+    "y_2B = y[y_clust == 1]\n",
+    "\n",
+    "print(X_2A.shape, X_2B.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box_lists = {}\n",
+    "for f in range(X_2B.shape[1]):\n",
+    "    box_lists[f] = {}\n",
+    "    for i in range(4): box_lists[f][i] = []\n",
+    "\n",
+    "\n",
+    "for i in np.arange(X_2B.shape[0]):\n",
+    "\n",
+    "    score = y_2B[i][0]\n",
+    "\n",
+    "    for f in range(X_2B.shape[1]):\n",
+    "\n",
+    "        box_lists[f][int(score)].append(X_2B[i, f])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i_f, ft in enumerate(ft_list):\n",
+    "\n",
+    "    plot_lists = [box_lists[i_f][i] for i in range(4)]\n",
+    "\n",
+    "    plt.boxplot(plot_lists)\n",
+    "    plt.title(ft)\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "feats_for_2nd_pred = [\n",
+    "    'coefVar_intraTapInt',\n",
+    "    'mean_tapRMS',\n",
+    "    'coefVar_tapRMS',\n",
+    "    'slope_tapRMS',\n",
+    "    'mean_raise_velocity',\n",
+    "    'jerkiness_trace'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test different prediction models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+    "\n",
+    "# import support vector machine\n",
+    "# import random forest\n",
+    "# import xgboost\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(290, 6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=6.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5177154195011338\n",
+      "[0.44897959 0.44897959 0.47916667 0.66666667 0.58333333 0.47916667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_dev = X_2B\n",
+    "y_dev = y_2B\n",
+    "\n",
+    "print(X_dev.shape)\n",
+    "\n",
+    "lda = LDA()\n",
+    "lda.fit(X_dev, y_dev)\n",
+    "\n",
+    "#Define method to evaluate model\n",
+    "cv = RepeatedStratifiedKFold(n_splits=6, n_repeats=1, random_state=1)\n",
+    "\n",
+    "# evaluate model\n",
+    "scores = cross_val_score(\n",
+    "    lda, scoring='accuracy', cv=cv, n_jobs=-1,\n",
+    "    X=X_dev, y=y_dev,)\n",
+    "print(np.mean(scores)) \n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVC(max_iter=10000)\n",
+      "LogisticRegression(multi_class='ovr', random_state=0, solver='liblinear')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CLassification Settings\n",
+    "X_dev = X_2B\n",
+    "y_dev = y_2B\n",
+    "nFolds = 5\n",
+    "\n",
+    "\n",
+    "# Shuffle order\n",
+    "# allData = np.hstack((X, y))\n",
+    "# X_shf = allData[:, :14]\n",
+    "# y_shf = allData[:, 14]\n",
+    "\n",
+    "# np.random.shuffle(allData)\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=nFolds,)\n",
+    "skf.get_n_splits(X_dev, y_dev)\n",
+    "\n",
+    "clf1 = LinearSVC(\n",
+    "    penalty='l2',\n",
+    "    C=1.0,\n",
+    "    multi_class='ovr',\n",
+    "    max_iter=10000,\n",
+    ")\n",
+    "clf2 = LogisticRegression(\n",
+    "    random_state=0, \n",
+    "    solver='liblinear',\n",
+    "    multi_class='ovr',\n",
+    ")\n",
+    "\n",
+    "shuffled_accs = []\n",
+    "np.random.seed(27)\n",
+    "\n",
+    "# for r_state in np.random.randint(100, size=1000):\n",
+    "\n",
+    "    # np.random.seed(r_state)\n",
+    "    # # y_shuffled = y.copy()\n",
+    "    # # np.random.shuffle(y_shuffled)\n",
+    "    # np.random.shuffle(y)\n",
+    "\n",
+    "for i_clf, clf in enumerate([clf1, clf2]):\n",
+    "\n",
+    "    print(clf)\n",
+    "\n",
+    "    y_pred, y_true = {}, {}\n",
+    "    all_accs = []\n",
+    "    for F, (train_index, test_index) in enumerate(\n",
+    "        skf.split(X_dev, y_dev)\n",
+    "    ):\n",
+    "\n",
+    "        X_train, X_test = X_dev[train_index], X_dev[test_index]\n",
+    "        y_train, y_test = y_dev[train_index], y_dev[test_index]\n",
+    "        # print('# of training samples:', len(X_train))\n",
+    "        # print('# of test samples:', len(X_test))\n",
+    "        # print('# 3/4 scores in test:', sum(y_test == 3))\n",
+    "        \n",
+    "        clf.fit(X=X_train, y=y_train)\n",
+    "        acc = clf.score(X=X_test, y=y_test)\n",
+    "        # print(\n",
+    "        #     f'accuracy for Fold {F}: {acc}')\n",
+    "        all_accs.append(acc)\n",
+    "        \n",
+    "        # save predictions for posthoc analysis and conf matrix\n",
+    "        y_pred[F] = clf.predict(X=X_test)\n",
+    "        y_true[F] = y_test\n",
+    "    \n",
+    "        # print(f'Clf run {i_clf}, fold # {F}: Conf Matrix\\n', \n",
+    "        #     multilabel_confusion_matrix(y_true[F], y_pred[F]))\n",
+    "\n",
+    "            \n",
+    "        # print(f'Overall mean Accuracy, Clf-{i_clf}: {np.mean(all_accs)}\\n')\n",
+    "        \n",
+    "        \n",
+    "        # shuffled_accs.append(np.mean(all_accs))\n",
+    "\n",
+    "# print('grand mean', np.mean(shuffled_accs))\n"
    ]
   },
   {
@@ -378,7 +652,7 @@
     }
    ],
    "source": [
-    "importlib.reload(plotClusters)\n",
+    "importlib.reload(plot_cluster)\n",
     "\n",
     "n_clusters=4\n",
     "center_incl = 'all'\n",
@@ -388,12 +662,12 @@
     "### VISUALISE AGAINST SUBS !! AND CONDITIONS\n",
     "\n",
     "\n",
-    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "traces, feats = pred_prep.select_traces_and_feats(\n",
     "    ftClass,\n",
     "    center=center_incl,\n",
     "    use_sel_fts=sel_feats,\n",
     ")\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
@@ -407,7 +681,7 @@
     "if sel_feats: figname += '_selFeats'\n",
     "else: figname += '_allFeats'\n",
     "\n",
-    "plotClusters.plot_cluster_kMeans(\n",
+    "plot_cluster.plot_cluster_kMeans(\n",
     "    X=X, y=y,\n",
     "    n_clusters=n_clusters,\n",
     "    use_pca=True,\n",
@@ -550,16 +824,16 @@
    ],
    "source": [
     "from scipy.stats import kruskal\n",
-    "importlib.reload(prep_pred)\n",
+    "importlib.reload(pred_prep)\n",
     "\n",
     "mask_scores = True\n",
     "\n",
-    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "traces, feats = pred_prep.select_traces_and_feats(\n",
     "    ftClass,\n",
     "    center=center_incl,\n",
     "    use_sel_fts=sel_feats,\n",
     ")\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
@@ -632,7 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
@@ -664,7 +938,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import multilabel_confusion_matrix"
+    "from sklearn.metrics import multilabel_confusion_matrix\n"
    ]
   },
   {
@@ -703,12 +977,12 @@
     }
    ],
    "source": [
-    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "traces, feats = pred_prep.select_traces_and_feats(\n",
     "    ftClass,\n",
     "    center='all',\n",
     "    use_sel_fts=True,\n",
     ")\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
@@ -759,7 +1033,7 @@
    "source": [
     "# CLassification Settings\n",
     "\n",
-    "X, y = prep_pred.create_X_y_vectors(\n",
+    "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
