tested work from today (clustering and first predictions) on 10 tap features

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
     "]\n",
     "\n",
     "X, y = pred_prep.create_X_y_vectors(\n",
-    "    ftClass=ftClass,\n",
+    "    ftClass=ftClass10,\n",
     "    incl_feats=ft_sel,\n",
     "    incl_traces=ftClass.incl_traces,\n",
     "    excl_traces=traces_excl,\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -575,17 +575,20 @@
     "\n",
     "n_clusters = 2\n",
     "\n",
+    "dd = str(dt.date.today().day).zfill(2)\n",
+    "mm = str(dt.date.today().month).zfill(2)\n",
+    "\n",
     "plot_cluster.plot_cluster_kMeans(\n",
     "    X=X, y=y, n_clusters=n_clusters,\n",
     "    use_pca=True,\n",
     "    z_score=True,\n",
     "    alt_labels=['mean ITI', 'cv ITI'],\n",
     "    show=False,\n",
-    "    # figsave_dir=os.path.join(fig_path_1D, 'clustering'),\n",
-    "    # figsave_name=(\n",
-    "    #     f'{dt.date.today().year}{mm}{dd}'\n",
-    "    #     f'_{n_clusters}clusters_M_CV_iti_'   # freq\n",
-    "    # ),\n",
+    "    figsave_dir=os.path.join(fig_path_1D, 'clustering'),\n",
+    "    figsave_name=(\n",
+    "        f'{dt.date.today().year}{mm}{dd}'\n",
+    "        f'_{n_clusters}clusters_10taps_M_CV_iti_freq'   # freq\n",
+    "    ),\n",
     ")\n",
     "\n",
     "y_clust, centr_clust, _ = plot_cluster.get_kMeans_clusters(\n",
@@ -598,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,12 +651,13 @@
     "mm = str(dt.date.today().month).zfill(2)\n",
     "figname = (\n",
     "    f'{dt.date.today().year}{mm}{dd}'\n",
-    "    f'_{n_clusters}clusters_M_CV_iti_scores'  # freq\n",
+    "    f'_{n_clusters}clusters_10taps_'\n",
+    "    'M_CV_iti_freq_scores'  # freq\n",
     ")\n",
     "\n",
-    "# plt.savefig(\n",
-    "#     os.path.join(fig_path_1D, 'clustering', figname),\n",
-    "#     dpi=150, facecolor='w',)\n",
+    "plt.savefig(\n",
+    "    os.path.join(fig_path_1D, 'clustering', figname),\n",
+    "    dpi=150, facecolor='w',)\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
