--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,9 +231,9 @@
     "\n",
     "# create matrix to cluster with\n",
     "X_1, y = pred_prep.create_X_y_vectors(\n",
-    "    ftClass=ftClass,\n",
+    "    ftClass=ftClass10,\n",
     "    incl_feats=ft_sel,\n",
-    "    incl_traces=ftClass.incl_traces,\n",
+    "    incl_traces=ftClass10.incl_traces,\n",
     "    excl_traces=traces_excl,\n",
     "    to_zscore=True,\n",
     ")\n",
@@ -265,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of NaNs per feat: [0 0 0 0 0 0]\n"
+      "# of NaNs per feat: [0 0 0 0 0 0 0 0 0 0 0]\n"
      ]
     }
    ],
@@ -280,44 +280,52 @@
     "importlib.reload(pred_prep)\n",
     "\n",
     "incl_traces, ft_list = pred_prep.select_traces_and_feats(\n",
-    "    ftClass, use_sel_fts=True, excl_traces=traces_excl,\n",
+    "    ftClass10, use_sel_fts=True, excl_traces=traces_excl,\n",
     ")\n",
     "\n",
     "feats_for_2nd_pred = [\n",
+    "    'freq',\n",
     "    'coefVar_intraTapInt',\n",
+    "    'mean_intraTapInt',\n",
+    "    'slope_intraTapInt',\n",
+    "    'decr_intraTapInt',\n",
     "    'mean_tapRMS',\n",
     "    'coefVar_tapRMS',\n",
     "    'slope_tapRMS',\n",
+    "    'decr_tapRMS',\n",
     "    'mean_raise_velocity',\n",
     "    'jerkiness_trace'\n",
     "]\n",
     "\n",
     "X_2, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
-    "    incl_traces=ftClass.incl_traces,\n",
+    "    incl_traces=ftClass10.incl_traces,\n",
     "    incl_feats=feats_for_2nd_pred,\n",
     "    excl_traces=traces_excl,\n",
     "    to_norm=False,\n",
     "    to_zscore=True,\n",
-    ")"
+    ")\n",
+    "# Mask UPDRS 4 -> 3 merge (4: n=3)\n",
+    "mask = y == 4\n",
+    "y[mask] = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(375, 3) (375, 6) (375,) (375,) 6 375\n"
+      "(375, 3) (375, 11) (375,) (375,) 11 375\n"
      ]
     }
    ],
    "source": [
     "incl_traces = [\n",
-    "    t for t in ftClass.incl_traces\n",
+    "    t for t in ftClass10.incl_traces\n",
     "    if t not in traces_excl\n",
     "]\n",
     "\n",
@@ -339,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(85, 6) (290, 6)\n"
+      "(294, 11) (81, 11)\n"
      ]
     }
    ],
@@ -362,33 +370,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create lists for boxplots of features per subscore, per cluster \n",
     "box_lists = {}\n",
-    "for f in range(X_2B.shape[1]):\n",
+    "for f in range(X_2A.shape[1]):\n",
     "    box_lists[f] = {}\n",
     "    for i in range(4): box_lists[f][i] = []\n",
     "\n",
     "\n",
-    "for i in np.arange(X_2B.shape[0]):\n",
+    "for i in np.arange(X_2A.shape[0]):\n",
     "\n",
-    "    score = y_2B[i][0]\n",
+    "    score = y_2A[i]\n",
     "\n",
-    "    for f in range(X_2B.shape[1]):\n",
+    "    for f in range(X_2A.shape[1]):\n",
     "\n",
-    "        box_lists[f][int(score)].append(X_2B[i, f])\n",
+    "        box_lists[f][int(score)].append(X_2A[i, f])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i_f, ft in enumerate(ft_list):\n",
+    "# plot features within cluster, and decide on strategy\n",
+    "# pm: use pre-knowledge about clusters\n",
+    "# likelihood in faster cluster for 1-2 scores\n",
+    "# use probabilities and adapt the threshold for acceptance\n",
+    "# start finding border scores (e.g. 1 or 3)\n",
+    "\n",
+    "for i_f, ft in enumerate(feats_for_2nd_pred):\n",
     "\n",
     "    plot_lists = [box_lists[i_f][i] for i in range(4)]\n",
     "\n",
@@ -397,14 +412,14 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "feats_for_2nd_pred = [\n",
-    "    'coefVar_intraTapInt',\n",
-    "    'mean_tapRMS',\n",
-    "    'coefVar_tapRMS',\n",
-    "    'slope_tapRMS',\n",
-    "    'mean_raise_velocity',\n",
-    "    'jerkiness_trace'\n",
-    "]"
+    "# feats_for_2nd_pred = [\n",
+    "#     'coefVar_intraTapInt',\n",
+    "#     'mean_tapRMS',\n",
+    "#     'coefVar_tapRMS',\n",
+    "#     'slope_tapRMS',\n",
+    "#     'mean_raise_velocity',\n",
+    "#     'jerkiness_trace'\n",
+    "# ]"
    ]
   },
   {
@@ -416,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,36 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(290, 6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=6.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5177154195011338\n",
-      "[0.44897959 0.44897959 0.47916667 0.66666667 0.58333333 0.47916667]\n"
+      "(294, 11)\n",
+      "0.5170068027210885\n",
+      "[0.40816327 0.46938776 0.59183673 0.53061224 0.55102041 0.55102041]\n"
      ]
     }
    ],
    "source": [
-    "X_dev = X_2B\n",
-    "y_dev = y_2B\n",
+    "X_dev = X_2A\n",
+    "y_dev = y_2A\n",
     "\n",
     "print(X_dev.shape)\n",
     "\n",
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -499,22 +500,12 @@
       "LinearSVC(max_iter=10000)\n",
       "LogisticRegression(multi_class='ovr', random_state=0, solver='liblinear')\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\model_selection\\_split.py:680: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
     "# CLassification Settings\n",
-    "X_dev = X_2B\n",
-    "y_dev = y_2B\n",
+    "X_dev = X_2A\n",
+    "y_dev = y_2A\n",
     "nFolds = 5\n",
     "\n",
     "\n",
@@ -576,11 +567,11 @@
     "        y_pred[F] = clf.predict(X=X_test)\n",
     "        y_true[F] = y_test\n",
     "    \n",
-    "        # print(f'Clf run {i_clf}, fold # {F}: Conf Matrix\\n', \n",
-    "        #     multilabel_confusion_matrix(y_true[F], y_pred[F]))\n",
+    "    #     print(f'Clf run {i_clf}, fold # {F}: Conf Matrix\\n', \n",
+    "    #         multilabel_confusion_matrix(y_true[F], y_pred[F]))\n",
     "\n",
     "            \n",
-    "        # print(f'Overall mean Accuracy, Clf-{i_clf}: {np.mean(all_accs)}\\n')\n",
+    "    # print(f'Overall mean Accuracy, Clf-{i_clf}: {np.mean(all_accs)}\\n')\n",
     "        \n",
     "        \n",
     "        # shuffled_accs.append(np.mean(all_accs))\n",
