ENH/FIX: fixed steady random seed (with sub sorting!) and added figures of dev- and holdout-sets only

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,29 +499,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tap_plotting.retap_plot_clusters as plot_cluster\n",
-    "import tap_predict.tap_pred_prepare as pred_prep"
+    "import tap_predict.tap_pred_prepare as pred_prep\n",
+    "import retap_utils.get_datasplit as get_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SPLITTING DATA IN DEV AND HOLD-OUT\n",
+      "Original score distribution: {0: 40, 1: 154, 2: 122, 3: 57, 4: 3}\n",
+      "Original score %: {0: 10.6, 1: 41.0, 2: 32.4, 3: 15.2, 4: 0.8}\n",
+      "Accepted Split: random state 63\n",
+      "\n",
+      "Resulting distributions in splitted data sets:\n",
+      "\n",
+      "\tdev data set (n = 285):\n",
+      "score 0: # 32 (11 %)\n",
+      "score 1: # 115 (40 %)\n",
+      "score 2: # 94 (33 %)\n",
+      "score 3: # 42 (15 %)\n",
+      "score 4: # 2 (1 %)\n",
+      "\thout data set (n = 91):\n",
+      "score 0: # 8 (9 %)\n",
+      "score 1: # 39 (43 %)\n",
+      "score 2: # 28 (31 %)\n",
+      "score 3: # 15 (16 %)\n",
+      "score 4: # 1 (1 %)\n",
       "# of NaNs per feat: [0 0 0]\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(pred_prep)\n",
+    "importlib.reload(get_split)\n",
     "\n",
     "# create matrix to cluster with\n",
     "traces_excl = [\n",
@@ -534,11 +555,15 @@
     "    'freq'\n",
     "]\n",
     "\n",
+    "# incl only dev-dataset and excl hold-out-dataset\n",
+    "datasplit_subs = get_split.find_dev_holdout_split(feats=ftClass10, )\n",
+    "\n",
     "X, y = pred_prep.create_X_y_vectors(\n",
     "    ftClass=ftClass10,\n",
     "    incl_feats=ft_sel,\n",
     "    incl_traces=ftClass.incl_traces,\n",
     "    excl_traces=traces_excl,\n",
+    "    excl_subs=datasplit_subs['dev'],\n",
     "    to_zscore=True,\n",
     ")\n",
     "\n",
@@ -555,16 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
       "  warnings.warn(\n",
-      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\retap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1334: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -586,7 +611,7 @@
     "    show=False,\n",
     "    figsave_dir=os.path.join(fig_path_1D, 'clustering'),\n",
     "    figsave_name=(\n",
-    "        f'{dt.date.today().year}{mm}{dd}'\n",
+    "        f'{dt.date.today().year}{mm}{dd}_holdOutSet'\n",
     "        f'_{n_clusters}clusters_10taps_M_CV_iti_freq'   # freq\n",
     "    ),\n",
     ")\n",
@@ -601,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +676,7 @@
     "mm = str(dt.date.today().month).zfill(2)\n",
     "figname = (\n",
     "    f'{dt.date.today().year}{mm}{dd}'\n",
-    "    f'_{n_clusters}clusters_10taps_'\n",
+    "    f'_{n_clusters}clusters_10taps_holdOutSet'\n",
     "    'M_CV_iti_freq_scores'  # freq\n",
     ")\n",
     "\n",
