WIP: added next step in algorithm: classifying updrs-3 from rest of fast tappers

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -296,34 +296,31 @@
     "    'coefVar_intraTapInt',\n",
     "    'freq'\n",
     "]\n",
+    "to_mask_4 = True\n",
+    "to_mask_0 = False\n",
     "\n",
-    "# include only dev dataset, exclude holdout data\n",
+    "# get dict with dev and hold-out datasets\n",
     "datasplit_subs = get_split.find_dev_holdout_split(\n",
     "    feats=ftClass10, )\n",
     "\n",
-    "# create matrix to cluster with\n",
-    "X_1, y, X1_ids = pred_prep.create_X_y_vectors(\n",
+    "# create dataclass for clustering (input matrix, label vector)\n",
+    "# only include dev, exclude hold-out\n",
+    "dev_data = pred_prep.create_X_y_vectors(\n",
     "    ftClass=ftClass10,\n",
     "    incl_feats=ft_sel,\n",
     "    incl_traces=ftClass10.incl_traces,\n",
     "    excl_traces=traces_excl,\n",
-    "    excl_subs=datasplit_subs['hout'],  # due to hold out data set\n",
+    "    excl_subs=datasplit_subs['hout'],  # excl hold out data\n",
     "    to_zscore=True,\n",
+    "    to_mask_4=to_mask_4,\n",
+    "    to_mask_0=to_mask_0,\n",
     "    return_ids=True,\n",
+    "    as_class=True\n",
     ")\n",
-    "\n",
-    "## MASKING BCS TOO LOW NUMBERS\n",
-    "# UPDRS 4 -> 3 merge (4: n=3)\n",
-    "mask = y == 4\n",
-    "y[mask] = 3\n",
-    "\n",
-    "# # UPDRS 0 -> 1 merge (0: n=40)\n",
-    "# mask = y == 0\n",
-    "# y[mask] = 1\n",
     "\n",
     "# create cluster labels\n",
     "y_clust, centr_clust, _ = plot_cluster.get_kMeans_clusters(\n",
-    "    X=X_1,\n",
+    "    X=dev_data.X,\n",
     "    n_clusters=n_clusters,\n",
     "    use_pca=True,\n",
     "    z_score=True,\n",
@@ -337,7 +334,7 @@
     "for i_cls in np.unique(y_clust):\n",
     "\n",
     "    i_ft = np.where([f == ft for f in ft_sel])[0][0]\n",
-    "    mean_iti_cluster = np.mean(X_1[y_clust == i_cls, i_ft])\n",
+    "    mean_iti_cluster = np.mean(dev_data.X[y_clust == i_cls, i_ft])\n",
     "    cluster_mean_ITIs.append(mean_iti_cluster)\n",
     "\n",
     "    print(f'\\tcluster {i_cls}: {mean_iti_cluster}')\n",
@@ -360,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +389,7 @@
     "    'jerkiness_trace'\n",
     "]\n",
     "\n",
-    "X_2, y, X2_ids = pred_prep.create_X_y_vectors(\n",
+    "cv_data = pred_prep.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=ftClass10.incl_traces,\n",
     "    incl_feats=feats_for_2nd_pred,\n",
@@ -400,31 +397,10 @@
     "    excl_subs=datasplit_subs['hout'],  # due to hold out data set\n",
     "    to_norm=False,\n",
     "    to_zscore=True,\n",
+    "    to_mask_4=True,\n",
     "    return_ids=True,\n",
-    ")\n",
-    "# Mask UPDRS 4 -> 3 merge (4: n=3)\n",
-    "mask = y == 4\n",
-    "y[mask] = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(284, 3) (284, 7) (284,) (284,) 7 (284,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\n",
-    "    X_1.shape, X_2.shape, y.shape, y_clust.shape,\n",
-    "    len(feats_for_2nd_pred), X2_ids.shape\n",
-    ")"
+    "    as_class=True,\n",
+    ")\n"
    ]
   },
   {
@@ -439,27 +415,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Total CV X shape: (284, 7)\n",
       "Fast X shape: (228, 7), Slow X shape: (56, 7)\n"
      ]
     }
    ],
    "source": [
-    "X_2fast = X_2[y_clust == fast_cluster_i]\n",
-    "y_2fast = y[y_clust == fast_cluster_i]\n",
-    "fast_cls_ids = X2_ids[y_clust == fast_cluster_i]\n",
+    "print(f'Total CV X shape: {cv_data.X.shape}')\n",
     "\n",
-    "X_2slow = X_2[y_clust == slow_cluster_i]\n",
-    "y_2slow = y[y_clust == slow_cluster_i]\n",
-    "slow_cls_ids = X2_ids[y_clust == slow_cluster_i]\n",
+    "cv_fast_data = pred_prep.predictionData(\n",
+    "    X=cv_data.X[y_clust == fast_cluster_i],\n",
+    "    y=cv_data.y[y_clust == fast_cluster_i],\n",
+    "    ids=cv_data.ids[y_clust == fast_cluster_i])\n",
     "\n",
-    "print(f'Fast X shape: {X_2fast.shape}, Slow X shape: {X_2slow.shape}')\n",
+    "cv_slow_data = pred_prep.predictionData(\n",
+    "    X=cv_data.X[y_clust == slow_cluster_i],\n",
+    "    y=cv_data.y[y_clust == slow_cluster_i],\n",
+    "    ids=cv_data.ids[y_clust == slow_cluster_i])\n",
+    "\n",
+    "print(f'Fast X shape: {cv_fast_data.X.shape}, Slow X shape: {cv_slow_data.X.shape}')\n",
     "\n"
    ]
   },
@@ -473,28 +454,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create lists for boxplots of features per subscore, per cluster\n",
     "\n",
-    "clst_X = X_2fast\n",
-    "clst_y = y_2fast\n",
+    "temp_data = cv_fast_data\n",
     "\n",
     "box_lists = {}\n",
-    "for f in range(clst_X.shape[1]):\n",
+    "for f in range(temp_data.X.shape[1]):\n",
     "    box_lists[f] = {}\n",
     "    for i in range(4): box_lists[f][i] = []\n",
     "\n",
     "\n",
-    "for i in np.arange(clst_X.shape[0]):\n",
+    "for i in np.arange(temp_data.X.shape[0]):\n",
     "\n",
-    "    score = clst_y[i]\n",
+    "    score = temp_data.y[i]\n",
     "\n",
-    "    for f in range(clst_X.shape[1]):\n",
+    "    for f in range(temp_data.X.shape[1]):\n",
     "\n",
-    "        box_lists[f][int(score)].append(clst_X[i, f])\n",
+    "        box_lists[f][int(score)].append(temp_data.X[i, f])\n",
     "\n",
     "# plot features within cluster, and decide on strategy\n",
     "# pm: use pre-knowledge about clusters\n",
@@ -586,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -596,8 +576,7 @@
       "shape of X_dev: (228, 7)\n",
       "predicting UPDRS score 1\n",
       "total y true: 127\n",
-      "Chance level: 0.5570175438596491\n",
-      "\n",
+      "Chance level: 0.557\n",
       "LogisticRegression(random_state=27)\n",
       "# of samples: train 171, test 57\n",
       "# true labels 31: chance is 0.543859649122807\n",
@@ -613,46 +592,40 @@
    "source": [
     "importlib.reload(cv_models)\n",
     "importlib.reload(plot_folds)\n",
-    "# CLassification Settings\n",
     "\n",
+    "# CLassification Settings\n",
+    "temp_data = cv_fast_data  # data to use here\n",
     "score_to_predict = 1\n",
+    "y_pred_true = temp_data.y <= score_to_predict\n",
     "clf_choice = 'logreg'\n",
     "nFolds = 4\n",
     "to_plot = False\n",
     "plot_thresholds = [.55, .58, .65]\n",
-    "    \n",
-    "X_cv = X_2fast.copy()\n",
-    "y_cv = y_2fast.copy() <= score_to_predict\n",
-    "ids_cv = fast_cls_ids.copy()\n",
-    "\n",
     "roc_title = f'Identify UPDRS 0-1 ({clf_choice})'\n",
     "\n",
-    "chance = sum(y_cv) / len(y_cv)\n",
-    "\n",
-    "print(f'shape of X_dev: {X_cv.shape}')\n",
+    "chance = round(sum(y_pred_true) / len(y_pred_true), 3)\n",
+    "print(f'shape of X_dev: {temp_data.X.shape}')\n",
     "print(f'predicting UPDRS score {score_to_predict}')\n",
-    "print(f'total y true: {sum(y_cv)}')\n",
+    "print(f'total y true: {sum(y_pred_true)}')\n",
     "print(f'Chance level: {chance}')\n",
-    "print()\n",
-    "\n",
     "\n",
     "y_pred_dict, y_proba_dict, y_true_dict, og_pred_idx = cv_models.get_cvFold_predictions_dicts(\n",
-    "    X_cv=X_cv, y_cv=y_cv,\n",
+    "    X_cv=temp_data.X,\n",
+    "    y_cv=y_pred_true,\n",
     "    cv_method=StratifiedKFold,\n",
     "    n_folds=nFolds,\n",
     "    clf=clf_choice,\n",
     "    # sv_kernel='linear',\n",
+    "    to_plot=to_plot,\n",
     ")\n",
     "if to_plot: \n",
-    "\n",
     "    plot_folds.plot_ROC_AUC_confMatrices_for_folds(\n",
     "        y_true_dict=y_true_dict,\n",
     "        y_proba_dict=y_proba_dict,\n",
     "        plot_thresholds=plot_thresholds,\n",
     "        roc_title=roc_title,\n",
     "        incl_mean_ROC=True,\n",
-    "    )\n",
-    "\n"
+    "    )"
    ]
   },
   {
@@ -665,107 +638,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
-    "proba_accept_thr = .58\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf_decision = np.zeros((y_cv.shape))\n",
+    "importlib.reload(pred_prep)\n",
     "\n",
-    "# loop over single probabilities in all folds\n",
-    "for fold_n in y_proba_dict:\n",
-    "    for i_proba, proba in enumerate(y_proba_dict[fold_n]):\n",
-    "        # set correct index to True (1) of proba > acceptance threshold\n",
-    "        if proba[1] > proba_accept_thr:\n",
-    "            # find corresponding index in full cv data\n",
-    "            og_idx = og_pred_idx[fold_n][i_proba]\n",
-    "            clf_decision[og_idx] = 1\n",
-    "\n"
+    "data_fast_01, data_fast_rest = pred_prep.split_dataset_on_pred_proba(\n",
+    "    orig_dataset=cv_fast_data,\n",
+    "    probas=y_proba_dict,\n",
+    "    og_indices=og_pred_idx,\n",
+    "    proba_thr=.58,\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['BER019_M0S0_L_2', 'BER019_M0S0_L_1', 'BER019_M0S0_R_1',\n",
-       "       'BER019_M0S0_R_2', 'BER019_M0S0_R_3', 'BER019_M0S1_L_1',\n",
-       "       'BER019_M0S1_R_2', 'BER019_M0S1_R_3', 'BER019_M0S1_R_1',\n",
-       "       'BER026_M0S0_L_2', 'BER026_M0S0_R_3', 'BER026_M0S0_R_1',\n",
-       "       'BER026_M0S0_R_2', 'BER026_M0S1_L_3', 'BER026_M0S1_L_2',\n",
-       "       'BER026_M0S1_L_1', 'BER026_M1S0_L_1', 'BER026_M1S0_L_3',\n",
-       "       'BER026_M1S0_L_2', 'BER026_M1S0_R_3', 'BER026_M1S0_R_2',\n",
-       "       'BER026_M1S0_R_1', 'BER026_M1S1_L_2', 'BER026_M1S1_L_3',\n",
-       "       'BER026_M1S1_L_1', 'BER026_M1S1_R_3', 'BER026_M1S1_R_1',\n",
-       "       'BER026_M1S1_R_2', 'BER033_M0S1_L_1', 'BER033_M0S1_L_2',\n",
-       "       'BER033_M0S1_R_3', 'BER033_M0S1_R_1', 'BER028_M0S1_R_2',\n",
-       "       'BER028_M1S0_L_1', 'BER028_M1S0_R_2', 'BER028_M1S0_R_3',\n",
-       "       'BER028_M1S0_R_1', 'BER028_M1S1_R_3', 'BER028_M1S1_R_2',\n",
-       "       'BER028_M1S1_R_1', 'BER024_M0S0_L_1', 'BER024_M0S0_L_2',\n",
-       "       'BER024_M0S0_R_2', 'BER024_M0S0_R_3', 'BER024_M0S0_R_1',\n",
-       "       'BER024_M0S1_L_1', 'BER024_M0S1_L_2', 'BER024_M0S1_L_3',\n",
-       "       'BER024_M1S0_R_3', 'BER024_M1S0_R_2', 'BER024_M1S0_R_1',\n",
-       "       'BER024_M1S1_L_1', 'BER024_M1S1_R_3', 'BER024_M1S1_R_1',\n",
-       "       'BER024_M1S1_R_2', 'BER030_M0S0_R_2', 'BER049_M0S0_L_3',\n",
-       "       'BER049_M0S0_L_2', 'BER049_M0S0_L_1', 'BER049_M0S0_R_2',\n",
-       "       'BER049_M0S0_R_1', 'BER049_M0S0_R_3', 'BER049_M1S0_R_2',\n",
-       "       'BER049_M1S0_R_1', 'BER049_M1S0_R_3', 'BER055_M0S0_L_2',\n",
-       "       'BER055_M0S0_R_2', 'BER055_M1S0_R_1', 'BER021_M0S1_R_1',\n",
-       "       'BER021_M0S1_R_3', 'BER021_M1S0_L_2', 'BER021_M1S0_R_3',\n",
-       "       'BER021_M1S0_R_2', 'BER021_M1S0_R_1', 'BER021_M1S1_L_1',\n",
-       "       'BER021_M1S1_R_1', 'BER021_M1S1_R_2', 'BER021_M1S1_R_3',\n",
-       "       'BER051_M0S0_L_3', 'BER051_M0S0_L_1', 'BER051_M0S0_L_2',\n",
-       "       'BER051_M1S0_L_2', 'BER051_M1S0_L_1', 'BER051_M1S0_L_3',\n",
-       "       'BER051_M1S0_R_3', 'BER051_M1S0_R_1', 'BER051_M1S0_R_2',\n",
-       "       'BER032_M0S0_L_3', 'BER032_M0S0_L_2', 'BER032_M0S0_L_1',\n",
-       "       'BER032_M0S0_R_3', 'BER032_M0S0_R_1', 'BER032_M0S0_R_2',\n",
-       "       'BER032_M1S0_L_1', 'BER032_M1S0_R_3', 'BER032_M1S0_R_1',\n",
-       "       'BER032_M1S0_R_2', 'BER052_M0S0_R_3', 'BER052_M0S0_R_1',\n",
-       "       'BER052_M0S0_R_2', 'BER052_M1S0_L_2', 'BER052_M1S0_L_1',\n",
-       "       'BER052_M1S0_R_2', 'BER052_M1S0_R_3', 'BER025_M0S0_L_1',\n",
-       "       'BER025_M0S0_L_2', 'BER025_M0S0_L_3', 'BER025_M0S1_L_1',\n",
-       "       'BER025_M0S1_L_2', 'BER025_M0S1_L_3', 'BER025_M0S1_R_1',\n",
-       "       'BER025_M0S1_R_3', 'DUS023_M1S1_L_1', 'DUS024_M0S1_L_1',\n",
-       "       'DUS024_M1S1_L_1', 'DUS013_M0S0_L_1', 'DUS013_M0S1_L_1',\n",
-       "       'DUS013_M1S1_L_1', 'DUS007_M0S0_L_1', 'DUS007_M1S1_L_1',\n",
-       "       'DUS026_M0S1_L_1', 'DUS009_M1S1_L_1', 'DUS010_M1S0_L_1'],\n",
-       "      dtype='<U15')"
-      ]
-     },
-     "execution_count": 299,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(random_state=27)\n",
+      "# of samples: train 78, test 27\n",
+      "# true labels 5: chance is 0.18518518518518517\n",
+      "# of samples: train 79, test 26\n",
+      "# true labels 5: chance is 0.19230769230769232\n",
+      "# of samples: train 79, test 26\n",
+      "# true labels 5: chance is 0.19230769230769232\n",
+      "# of samples: train 79, test 26\n",
+      "# true labels 5: chance is 0.19230769230769232\n"
+     ]
     }
    ],
    "source": [
-    "ids_cv[clf_decision.astype(bool)]"
+    "importlib.reload(cv_models)\n",
+    "\n",
+    "clf_choice = 'LogReg'\n",
+    "to_plot=False\n",
+    "plot_thresholds=[.4, .5, .6]\n",
+    "roc_title=f'Rest Fast-Tappers == UPDRS 3 ({clf_choice})'\n",
+    "\n",
+    "(cv_pred, cv_proba, cv_true, cv_idx\n",
+    ") = cv_models.get_cvFold_predictions_dicts(\n",
+    "    X_cv=data_fast_rest.X,\n",
+    "    y_cv=data_fast_rest.y == 3,\n",
+    "    n_folds=4,\n",
+    "    clf=clf_choice,\n",
+    ")\n",
+    "if to_plot: \n",
+    "    plot_folds.plot_ROC_AUC_confMatrices_for_folds(\n",
+    "        y_true_dict=y_true_dict,\n",
+    "        y_proba_dict=y_proba_dict,\n",
+    "        plot_thresholds=plot_thresholds,\n",
+    "        roc_title=roc_title,\n",
+    "        incl_mean_ROC=True,\n",
+    "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
